--- a/css/style.css
+++ b/css/style.css
@@ -4,36 +4,37 @@
   font-family: sans-serif;
 }
 
-/* Banner */
 
 nav li:hover{
-  background-color: #4CAF50;
+  background-color: #141619;
   border-radius: 5px;
   transition-duration: 0.4s;
 }
 
+/* Banner */
+
 .banner {
   background-image: url(../assets/bannar1.jpg);
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   text-align: center;
   color: #ffff;
   padding: 150px 0;
 }
 
 .banner h1 {
-  font-size: 350%;
-  padding-top: 1%;
+  font-size: 50px;
 }
 
 .banner h4 {
-  font-size: 180%;
-  padding: 1% 0;
+  font-size: 50px;
 }
 
 .banner h5 {
-  font-size: 150%;
+  font-size: 40px;
 }
+
+/* Style for the search bar */
 
 .search-bar {
   margin: 0.5% 1%;
@@ -47,20 +48,20 @@ nav li:hover{
   border: none;
 }
 
-.search-bar :hover {
-  color: white;
-  background-color: #000000;
-  transition-duration: 0.5s;
-}
 
-.search-button {
-  background-color: #4CAF50;
+.search-bar button {
+  background-color: #050a44;
   color: white;
   border: none;
   border-radius: 12px;
   padding: 13px 28PX;
 }
 
+.search-bar button:hover {
+  color: white;
+  background-color: #141619;
+  transition-duration: 0.5s;
+}
 
 /* Cards */
 
@@ -71,6 +72,10 @@ nav li:hover{
 .cards{
   text-align: center;
   padding: 35px;
+  background-color: #b3b4bd;
+}
+.cards h1{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .card-container {
@@ -79,6 +84,7 @@ nav li:hover{
   gap: 20px;
    justify-content: center;
    padding-bottom: 25px;
+   background-color: #b3b4bd;
 }
 .product-card{
   width: 22%;
@@ -121,12 +127,14 @@ nav li:hover{
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
-  background-color: #4CAF50;
-  color: #fff;
+  font-weight: bold;
+  background-color: #b3b4bd;
+  color: black;
 } 
 
 .card-buttons :hover{
   background-color: #000000;
+  color: white;
   transition-duration: 0.4s;
 }
 
@@ -146,7 +154,7 @@ nav li:hover{
 /* footer */
 
 footer {
-    background-color: #333;
+    background-color: #2c2e3c;
     color: #fff;
     text-align: center;
     font-weight: bold;
@@ -175,7 +183,7 @@ footer {
   }
   
   .footer-section h3{
-    color: #4CAF50;
+    color: #b3b4bd;
     font-weight: bold;
   }
 
@@ -191,7 +199,7 @@ footer {
   }
   
   .end{
-    color: #4CAF50;
+    color: #b3b4bd;
   }
 
   @media screen and (max-width: 600px) {
