--- a/css/about.css
+++ b/css/about.css
@@ -4,11 +4,10 @@
     font-family: sans-serif;
 }
 
-/* about us */
 header {
   background-image: url(../assets/banner2.png);
   background-size: cover;
-  padding: 150px 0;
+  padding: 100px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,7 +59,7 @@ header h1{
 /* footer */
 
 footer {
-  background-color: #333;
+  background-color: #2c2e3c;
   color: #fff;
   text-align: center;
   font-weight: bold;
@@ -89,7 +88,7 @@ footer h3{
 }
 
 .footer-section h3{
-  color: #4CAF50;
+  color: #b3b4bd;
   font-weight: bold;
 }
 
@@ -105,7 +104,7 @@ footer h3{
 }
 
 .end{
-  color: #4CAF50;
+  color: #b3b4bd;
 }
 
 @media screen and (max-width: 600px) {
