--- a/css/category.css
+++ b/css/category.css
@@ -62,7 +62,7 @@
   width: 100%;
   padding: 10px;
   margin-top: 10px;
-  background-color: #4CAF50;
+  background-color: #b3b4bd;
   color: #fff;
   text-align: center;
   text-decoration: none;
@@ -73,12 +73,12 @@
 }
 
 .buy-button:hover {
-  background-color: #45a049;
+  background-color: rgb(212, 180, 241);
 }
 /* footer */
 
 footer {
-  background-color: #333;
+  background-color: #2c2e3c;
   color: #fff;
   text-align: center;
   font-weight: bold;
@@ -107,7 +107,7 @@ footer h3{
 }
 
 .footer-section h3{
-  color: #4CAF50;
+  color: #b3b4bd;
   font-weight: bold;
 }
 
@@ -123,7 +123,7 @@ footer h3{
 }
 
 .end{
-  color: #4CAF50;
+  color: #b3b4bd;
 }
 
 @media screen and (max-width: 600px) {
