--- a/css/compare.css
+++ b/css/compare.css
@@ -73,7 +73,7 @@
     color: white;
     padding: 15px 32px;
     text-align: center;
-    background-color: #0066ff;
+    background-color: #050a44;
     border-radius: 5px;
     border: none;
   }
@@ -84,54 +84,54 @@
   }
   /* footer */
 
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  font-weight: bold;
-  padding: 20px 0;
-}
+  footer {
+    background-color: #2c2e3c;
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    padding: 20px 0;
+  }
+  
+  footer h3{
+    margin-bottom: 15px;
+  }
+  
+  .footer-content {
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  
+  .footer-section {
+    flex: 1;
+    margin-bottom: 20px;
+    flex: 1;
+    margin-right: 20px;
+  }
+  
+  .footer-section h3{
+    color: #b3b4bd;
+    font-weight: bold;
+  }
 
-footer h3{
-  margin-bottom: 15px;
-}
-
+  .footer-section span{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
 .footer-content {
-  display: flex;
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-
-.footer-section {
-  flex: 1;
-  margin-bottom: 20px;
-  flex: 1;
-  margin-right: 20px;
-}
-
-.footer-section h3{
-  color: #4CAF50;
-  font-weight: bold;
-}
-
-.footer-section span{
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
-.footer-content {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.end{
-  color: #4CAF50;
-}
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  
+  .end{
+    color: #b3b4bd;
+  }
 
 @media screen and (max-width: 600px) {
   .footer-section {
