--- a/css/contact.css
+++ b/css/contact.css
@@ -17,7 +17,7 @@
   margin-top: 100px;
   margin-bottom: 100px;
   max-width: 80%;
-  background-color: rgba(84, 41, 124, .7);
+  background-color: rgba(179, 180, 189, .7);
   border-radius: 10px;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .submit-btn {
-  background-color: #0066ff;
+  background-color: #050a44;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -70,7 +70,7 @@
 /* footer */
 
 footer {
-  background-color: #333;
+  background-color: #2c2e3c;
   color: #fff;
   text-align: center;
   font-weight: bold;
@@ -99,7 +99,7 @@ footer h3{
 }
 
 .footer-section h3{
-  color: #4CAF50;
+  color: #b3b4bd;
   font-weight: bold;
 }
 
@@ -115,7 +115,7 @@ footer h3{
 }
 
 .end{
-  color: #4CAF50;
+  color: #b3b4bd;
 }
 
 @media screen and (max-width: 600px) {
