--- a/css/login.css
+++ b/css/login.css
@@ -15,7 +15,7 @@
 }
 
 .login-form {
-  background-color: rgba(84, 41, 124, .9);
+  background-color: rgba(179, 180, 189, .7);
   padding: 40px;
   border-radius: 8px;
   text-align: center;
@@ -41,7 +41,7 @@
 
 .login-form button {
   padding: 10px 20px;
-  background-color: #0066ff;
+  background-color: #050a44;
   color: white;
   font-size: 15px;
   border: none;
@@ -67,7 +67,7 @@
 /* footer */
 
 footer {
-  background-color: #333;
+  background-color: #2c2e3c;
   color: #fff;
   text-align: center;
   font-weight: bold;
@@ -96,7 +96,7 @@ footer h3{
 }
 
 .footer-section h3{
-  color: #4CAF50;
+  color: #b3b4bd;
   font-weight: bold;
 }
 
@@ -112,7 +112,7 @@ footer h3{
 }
 
 .end{
-  color: #4CAF50;
+  color: #b3b4bd;
 }
 
 @media screen and (max-width: 600px) {
