--- a/css/support.css
+++ b/css/support.css
@@ -16,12 +16,12 @@
   }
   
   .support-container {
-    background-color: rgba(84, 41, 124, .9);
+    background-color: rgba(179, 180, 189, .7);
     padding: 40px;
     border-radius: 8px;
     width: 35%;
     margin: auto;
-    color: white;
+    color: #2c2e3a;
     max-width: 800px;
   width: 100%;
   }
@@ -52,7 +52,7 @@
     border: none;
     font-size: 16px;
     margin-top: 10px;
-    background-color: #0066ff;
+    background-color: #050a44;
     color: white;
   }
   
@@ -98,7 +98,7 @@
 /* footer */
 
 footer {
-  background-color: #333;
+  background-color: #2c2e3c;
   color: #fff;
   text-align: center;
   font-weight: bold;
@@ -127,7 +127,7 @@ footer h3{
 }
 
 .footer-section h3{
-  color: #4CAF50;
+  color: #b3b4bd;
   font-weight: bold;
 }
 
@@ -143,7 +143,7 @@ footer h3{
 }
 
 .end{
-  color: #4CAF50;
+  color: #b3b4bd;
 }
 
 @media screen and (max-width: 600px) {
