--- a/css/category.css
+++ b/css/category.css
@@ -4,6 +4,12 @@
     font-family: sans-serif;
   }
 
+  nav li:hover{
+    background-color: #141619;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+  }
+
 /* Category */
 
 .cheading{
