--- a/css/compare.css
+++ b/css/compare.css
@@ -3,6 +3,13 @@
     padding: 0;
     font-family: sans-serif;
   }
+
+  nav li:hover{
+    background-color: #141619;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+  }
+
 /* Compare */
 
   .comparehead img{
